--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.10"
+    "@astrojs/partytown": "^2.1.4",
+    "@astrojs/sitemap": "^3.3.1",
+    "@fontsource/meddon": "^5.2.5",
+    "@fontsource/pretendard": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "^5.7.10",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.1",
+    "tailwindcss": "^4.1.5"
   }
 }
