--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "astro": "^5.7.10",
     "gsap": "^3.13.0",
     "lenis": "^1.3.1",
+    "magicmouse.js": "^2.0.0",
+    "nanostores": "^1.0.1",
+    "split-type": "^0.3.4",
     "tailwindcss": "^4.1.5"
   }
 }
