--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@astrojs/sitemap": "^3.4.1",
     "@fontsource/meddon": "^5.2.5",
     "@fontsource/pretendard": "^5.2.5",
+    "@nanostores/persistent": "^1.1.0",
     "@tailwindcss/vite": "^4.1.5",
-    "astro": "^5.10.1",
+    "astro": "^5.11.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.1",
+    "lottie-web": "^5.13.0",
     "nanostores": "^1.0.1",
     "split-type": "^0.3.4",
     "tailwindcss": "^4.1.5"
