--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -20,6 +20,8 @@
     "lenis": "^1.3.1",
     "lottie-web": "^5.13.0",
     "nanostores": "^1.0.1",
+    "shiki": "^3.7.0",
+    "shiki-stream": "^0.1.2",
     "split-type": "^0.3.4",
     "tailwindcss": "^4.1.5"
   }
